[package]
name = "ldap_cache_daemon"
version = "0.1.0"
edition = "2024"
description = "A simple LDAP cache daemon"
license-file = "LICENSE"

[[bin]]
name = "ldap_cache_daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
ldap3 = "0.11"
log = "0.4"
env_logger = "0.11"
getset = "0.1"

[dev-dependencies]
tempfile = "3.8"

[package.metadata.rpm]
package = "ldap_cache_daemon"

[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
ldap_cache_daemon = { path = "/usr/bin/ldap_cache_daemon" }
